# rs-rubik

./: Cargo.toml
benches/: randomize_benchmark.rs  solve2_benchmark.rs  solve_benchmark.rs
src/: array_cube.rs  cube.rs  cube3d.rs  cubie_cube.rs  db.rs  lib.rs  main.rs  solve.rs
src/db/: basic_bitset.rs  lehmer_indexer.rs  nibble_array.rs  pattern_database.rs
