[package]
name = "rs-rubik"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arr_macro = "0.2.1"
enum-iterator = "1.2.0"
itertools = "0.10.5"
kiss3d = "0.35.0"
num_enum = "0.5.7"
rand = "0.8.5"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
